线程安全问题，性能问题